<resources>
    <string name="app_name">KK POP</string>
    <string name="service_address">http://211.245.239.53:2224/Service/json/</string><!--본DB-->
    <string name="service_address_test">http://211.245.239.53:2228/Service/json/</string><!--테스트DB-->
    <string name="service_address_kkm">http://211.245.239.53:2230/Service/json/</string><!--KKM-->
    <string name="service_address_kkv">http://211.245.239.53:2231/Service/json/</string><!--KKV-->
    <string name="service_address_login">http://211.245.239.53:2232/Service/json/</string><!--LoginService-->
    <string name="app_code">8</string>
    <string name="qr_state_common">TAG를 인식해주세요 (Please Scan TAG)</string>
    <string name="price_format">%,2d</string>

    <string name="developer">JH LEE</string>
    <string name="website">https://github.com/spam114</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_slideshow">Slideshow</string>
    <string name="menu_item_tools">Tools</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>

    <string name="menu1">생산실적 등록</string>
    <string name="menu2">쇼트생산 등록(A급 대기)</string>
    <string name="menu3">계획생산 등록(A급)</string>
    <string name="menu4">현황보기</string>
    <string name="menu5">반입 현황(계근)</string>
    <string name="menu6">반입 현황(분류)</string>
    <string name="menu7">쇼트생산 현황</string>
    <string name="menu8">생산실적(신제/보수) 현황</string>
    <string name="menu9">출고 현황</string>
    <string name="menu10">포장/출고</string>
    <string name="menu11">제품 포장</string>
    <string name="menu12">번들 생성</string>
    <string name="menu13">재고 이송</string>
    <string name="menu14">제품 출고</string>
    <string name="menu15">자료 수신</string>
    <string name="menu16">포장실적(POP) 현황</string>
    <string name="menu17">현재고 현황(규격)</string>
    <string name="menu18">재고 이입</string>
    <string name="menu19">출고 검수</string>
    <string name="menu20">자료 송신</string>
    <string name="menu21">원자재</string>
    <string name="menu22">원자재 불출</string>
    <string name="menu23">원자재 이동</string>
    <string name="menu24">공정 관리</string>
    <string name="menu25">공정 진행 등록</string>

    <string name="menu1_eng">Production Result</string>
    <string name="menu2_eng">Register Shot Blast</string>
    <string name="menu3_eng">Register Planned Production</string>
    <string name="menu4_eng">Analysis of the status</string>
    <string name="menu5_eng">Carry-in status(Weight)</string>
    <string name="menu6_eng">Carry-in status(Classification)</string>
    <string name="menu7_eng">Shot Blast Prodcution Status</string>
    <string name="menu8_eng">Production Result(New/Repair)</string>
    <string name="menu9_eng">Release Status</string>
    <string name="menu10_eng">Packing/Release</string>
    <string name="menu11_eng">Pack Product</string>
    <string name="menu12_eng">Create Bundle</string>
    <string name="menu13_eng">Transfer Stock</string>
    <string name="menu14_eng">Ship the Product</string>
    <string name="menu15_eng">Receive Data</string>
    <string name="menu16_eng">Packing Result(POP)</string>
    <string name="menu17_eng">Current Stock Status(Standard)</string>
    <string name="menu18_eng">Bring in Stock</string>
    <string name="menu19_eng">Check Shipment</string>
    <string name="menu20_eng">Transmit Data</string>
    <string name="menu21_eng">Raw Material</string>
    <string name="menu22_eng">Carry Out Raw Material</string>
    <string name="menu23_eng">Transfer Raw Material</string>
    <string name="menu24_eng">Process</string>
    <string name="menu25_eng">Start Process</string>

    <string name="detail_menu_0000">제품 포장</string>
    <string name="detail_menu_0010">제품 포장</string>
    <string name="detail_menu_0100">제품 검수</string>
    <string name="detail_menu_0120">세대 출력</string>
    <string name="detail_menu_0122">제품TAG 재출력</string>
    <string name="detail_menu_0300">제품 포장</string>
    <string name="detail_menu_0400">포장 수정</string>
    <string name="detail_menu_0410">포장 수정</string>
    <string name="detail_menu_0411">제품 추가</string>
    <string name="detail_menu_0412">제품 제외</string>
    <string name="detail_menu_0500">포장 계근</string>
    <string name="detail_menu_0510">포장 계근</string>
    <string name="detail_menu_2000">번들 생성</string>
    <string name="detail_menu_2100">번들 생성</string>
    <string name="detail_menu_2200">번들 수정</string>
    <string name="detail_menu_2300">번들 수정</string>
    <string name="detail_menu_3000">재고 이송</string>
    <string name="detail_menu_3010">재고 이송</string>
    <string name="detail_menu_3100">출고TAG 출력</string>
    <string name="detail_menu_3110">출고TAG 재출력</string>
    <string name="detail_menu_3200">재고 이송</string>
    <string name="detail_menu_3300">이송 수정</string>
    <string name="detail_menu_3310">이송 수정</string>
    <string name="detail_menu_4000">재고 이입</string>
    <string name="detail_menu_4100">재고 이입</string>
    <string name="detail_menu_5000">제품 출고</string>
    <string name="detail_menu_5010">제품 출고</string>
    <string name="detail_menu_5100">컨테이너</string>
    <string name="detail_menu_5110">컨테이너</string>
    <string name="detail_menu_5200">출고TAG 출력</string>
    <string name="detail_menu_5210">출고TAG 재출력</string>
    <string name="detail_menu_5300">출고 생성</string>
    <string name="detail_menu_5310">기타 정보</string>
    <string name="detail_menu_5400">출고 수정</string>
    <string name="detail_menu_5410">출고 수정</string>
    <string name="detail_menu_5320">컨테이너 번호</string>
    <string name="detail_menu_5330">출고 부서</string>
    <string name="detail_menu_5340">운송사</string>
    <string name="detail_menu_5350">지역</string>
    <string name="detail_menu_6000">출고 검수</string>
    <string name="detail_menu_6010">출고 검수</string>
    <string name="detail_menu_6100">정상 검수</string>
    <string name="detail_menu_6110">정상 검수</string>
    <string name="detail_menu_6120">포장 검수</string>
    <string name="detail_menu_6200">포장 검수</string>
    <string name="detail_menu_6130">제품 검수</string>
    <string name="detail_menu_6300">제품 검수</string>

    <string name="detail_menu_0000_eng">Packing</string>
    <string name="detail_menu_0010_eng">Packing</string>
    <string name="detail_menu_0100_eng">Inspection</string>
    <string name="detail_menu_0120_eng">Print Zone</string>
    <string name="detail_menu_0122_eng">RePrint ITEM TAG</string>
    <string name="detail_menu_0300_eng">Packing</string>
    <string name="detail_menu_0400_eng">Edit Packing</string>
    <string name="detail_menu_0410_eng">Edit Packing</string>
    <string name="detail_menu_0411_eng">Add Production</string>
    <string name="detail_menu_0412_eng">Exclude Production</string>
    <string name="detail_menu_0500_eng">Weigh Packing</string>
    <string name="detail_menu_0510_eng">Weigh Packing</string>
    <string name="detail_menu_2000_eng">Create Bundle</string>
    <string name="detail_menu_2100_eng">Create Bundle</string>
    <string name="detail_menu_2200_eng">Edit Bundle</string>
    <string name="detail_menu_2300_eng">Edit Bundle</string>
    <string name="detail_menu_3000_eng">Transfer Stock</string>
    <string name="detail_menu_3010_eng">Transfer Stock</string>
    <string name="detail_menu_3100_eng">Print OUT TAG</string>
    <string name="detail_menu_3110_eng">Reprint OUT TAG</string>
    <string name="detail_menu_3200_eng">Transfer Stock</string>
    <string name="detail_menu_3300_eng">Edit Transfer</string>
    <string name="detail_menu_3310_eng">Edit Transfer</string>
    <string name="detail_menu_4000_eng">Carry in Stock</string>
    <string name="detail_menu_4100_eng">Carry in Stock</string>
    <string name="detail_menu_5000_eng">Release Production</string>
    <string name="detail_menu_5010_eng">Release Production</string>
    <string name="detail_menu_5100_eng">Container</string>
    <string name="detail_menu_5110_eng">Container</string>
    <string name="detail_menu_5200_eng">Print OUT TAG</string>
    <string name="detail_menu_5210_eng">Reprint OUT TAG</string>
    <string name="detail_menu_5300_eng">Create Release</string>
    <string name="detail_menu_5310_eng">ETC Info</string>
    <string name="detail_menu_5400_eng">Edit Release</string>
    <string name="detail_menu_5410_eng">Edit Release</string>
    <string name="detail_menu_5320_eng">Container No</string>
    <string name="detail_menu_5330_eng">Release Dept</string>
    <string name="detail_menu_5340_eng">Transporter</string>
    <string name="detail_menu_5350_eng">Area</string>
    <string name="detail_menu_6000_eng">Inspect Release</string>
    <string name="detail_menu_6010_eng">Inspect Release</string>
    <string name="detail_menu_6100_eng">Inspect Normality</string>
    <string name="detail_menu_6110_eng">Inspect Normality</string>
    <string name="detail_menu_6120_eng">Inspect Packing</string>
    <string name="detail_menu_6200_eng">Inspect Packing</string>
    <string name="detail_menu_6130_eng">Inspect Production</string>
    <string name="detail_menu_6300_eng">Inspect Production</string>

    <string name="activity_intent_filter_action">com.zebra.datacapture1.ACTION</string>
    <string name="activity_action_from_service">com.zebra.datacapture1.service.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>

</resources>